package handlers

import (
	"context"

	"github.com/lbpay-lab/conn-bridge/internal/application/usecases"
)

// DictHandler handles gRPC requests for DICT operations
type DictHandler struct {
	createEntryUseCase *usecases.CreateEntryUseCase
	queryEntryUseCase  *usecases.QueryEntryUseCase
	deleteEntryUseCase *usecases.DeleteEntryUseCase
	createClaimUseCase *usecases.CreateClaimUseCase
	// TODO: Add other use cases as needed
}

// NewDictHandler creates a new DICT handler
func NewDictHandler(
	createEntryUseCase *usecases.CreateEntryUseCase,
	queryEntryUseCase *usecases.QueryEntryUseCase,
	deleteEntryUseCase *usecases.DeleteEntryUseCase,
	createClaimUseCase *usecases.CreateClaimUseCase,
) *DictHandler {
	return &DictHandler{
		createEntryUseCase: createEntryUseCase,
		queryEntryUseCase:  queryEntryUseCase,
		deleteEntryUseCase: deleteEntryUseCase,
		createClaimUseCase: createClaimUseCase,
	}
}

// CreateEntry handles the CreateEntry gRPC call
// TODO: Implement actual gRPC handler when proto files are available
func (h *DictHandler) CreateEntry(ctx context.Context, req interface{}) (interface{}, error) {
	// TODO: Convert gRPC request to use case request
	// useCaseReq := &usecases.CreateEntryRequest{
	// 	Entry: ...,
	// 	CorrelationID: ...,
	// }

	// response, err := h.createEntryUseCase.Execute(ctx, useCaseReq)
	// if err != nil {
	// 	return nil, err
	// }

	// TODO: Convert use case response to gRPC response
	// return &dictpb.CreateEntryResponse{
	// 	Success: response.Success,
	// 	EntryId: response.EntryID,
	// 	ErrorCode: response.ErrorCode,
	// 	ErrorMessage: response.ErrorMessage,
	// }, nil

	return nil, nil
}

// QueryEntry handles the QueryEntry gRPC call
func (h *DictHandler) QueryEntry(ctx context.Context, req interface{}) (interface{}, error) {
	// TODO: Implement when proto files are available
	return nil, nil
}

// DeleteEntry handles the DeleteEntry gRPC call
func (h *DictHandler) DeleteEntry(ctx context.Context, req interface{}) (interface{}, error) {
	// TODO: Implement when proto files are available
	return nil, nil
}

// CreateClaim handles the CreateClaim gRPC call
func (h *DictHandler) CreateClaim(ctx context.Context, req interface{}) (interface{}, error) {
	// TODO: Implement when proto files are available
	return nil, nil
}

// UpdateEntry handles the UpdateEntry gRPC call
func (h *DictHandler) UpdateEntry(ctx context.Context, req interface{}) (interface{}, error) {
	// TODO: Implement when proto files are available
	return nil, nil
}

// ConfirmClaim handles the ConfirmClaim gRPC call
func (h *DictHandler) ConfirmClaim(ctx context.Context, req interface{}) (interface{}, error) {
	// TODO: Implement when proto files are available
	return nil, nil
}

// CancelClaim handles the CancelClaim gRPC call
func (h *DictHandler) CancelClaim(ctx context.Context, req interface{}) (interface{}, error) {
	// TODO: Implement when proto files are available
	return nil, nil
}
